login, criacao de usuario e redirecionamentos funcionais

--- a/fakepin/templates/homepage.html
+++ b/fakepin/templates/homepage.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block titulo %} FakePinterent {% endblock %}</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>
-    {% block titulo %}
-    FakePinterent
+  {% block body %}
+  <body>
+    <h1>FakePinterest</h1>
 
+    <br />
+
+    {% block form %}
+    <form method="POST">
+      {{form.csrf_token }}
+      <div>{{form.email.label()}} {{form.email()}}</div>
+      <div>{{form.senha.label()}} {{form.senha()}}</div>
+      <div>{{form.botao_confirmacao()}}</div>
+    </form>
     {% endblock %}
-  </title>
-</head>
-
-
-{% block body %}
-<body>
-
-  <h1>FakePinterest</h1>
-
-</body>
-{% endblock %}
-
+  </body>
+  {% endblock %}
 </html>
