--- a/fakepin/templates/perfil.html
+++ b/fakepin/templates/perfil.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Perfil do usuário: {{ usuario }}</h1>
 
-  <a href="{{url_for('homepage')}}">Sair</a>
+  <a href="{{url_for('logout')}}">Sair</a>
 </body>
 
 {% endblock %}
