--- a/fakepin/templates/perfil.html
+++ b/fakepin/templates/perfil.html
@@ -1,17 +1,48 @@
-{% extends "homepage.html" %}
-
-
-
-
-
-
-{% block body %}
+{% extends "homepage.html" %} {% block body %}
 
 <body>
-  <h1>Perfil do usuário: {{ usuario }}</h1>
+  {% include "navbar.html" %} {% if form %}
+  <form class="bloco-add-img" method="POST" enctype="multipart/form-data">
+    {{form.csrf_token }}
+    <h2>{{ usuario.username }} - Enviar foto</h2>
 
-  <a href="{{url_for('logout')}}">Sair</a>
+
+      <div class="bloco-arquivo">
+        <label for="foto" class="botao-arquivo">
+          Escolher arquivo
+          {{form.foto(class="input-arquivo",id="foto" )}}
+        </label>
+        <span id="imagem-arquivo" class=""></span>
+      </div>
+      {{form.botao_confirmacao(class="botao-login")}}
+
+  </form>
+  {% else %}
+  <div class="bloco-add-img">
+    <h2>{{ usuario.username }} - Ver Perfil</h2>
+  </div>
+  {% endif %}
+
+  <div class="conteudo">
+    {% for foto in usuario.fotos %}
+      <div class="bloco-imagem">
+        <img
+          src="{{ url_for('static', filename='fotos_posts/{}'.format(foto.imagem))}}"
+          />
+      </div>
+    {% endfor %}
+  </div>
+
+  <script>
+    let input = document.getElementById("foto");
+    let imagemArquivo = document.getElementById("imagem-arquivo");
+
+    input.addEventListener("change", () => {
+      let inputImagem = document.querySelector("input[type=file]").files[0];
+
+      imagemArquivo.classList.add("visivel");
+      imagemArquivo.innerText = inputImagem.name;
+    });
+  </script>
 </body>
-
 {% endblock %}
-
